Event failed to dispatch after stopPropagation

This patch implements step 14 of
https://dom.spec.whatwg.org/#concept-event-dispatch

BUG=656839

Review-Url: https://codereview.chromium.org/2501333003
Cr-Commit-Position: refs/heads/master@{#434368}

Former-commit-id: 87e4a44094fe159ee1b311c1c784661d4d367f8f